tests/import_wildcard_bad.stderr
tests/import_wildcard_bad.sl:20:21: error: unexpected token
