tests/import_wildcard_bad.sl
import "lib/math" { * }

fn main() {}
